<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/black_box"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/m_letter"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/label_marvel_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marvel_challenge"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m_letter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:maxWidth="150dp"
        android:minWidth="100dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/black"
        app:helperTextTextColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/black_box">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/black"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        android:maxWidth="150dp"
        android:minWidth="100dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/black"
        app:helperTextTextColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:shadowColor="@color/black"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_register"
        app:layout_constraintEnd_toStartOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_login"
        app:layout_constraintTop_toTopOf="@id/btn_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_facebook"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        app:icon="@mipmap/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />


</androidx.constraintlayout.widget.ConstraintLayout>