<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <data>

        <variable
            name="evento"
            type="ar.edu.unlam.intermediamarvelchallenge.data.models.Event" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/event_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkGrey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="4dp"
        app:strokeColor="@color/black"
        android:layout_marginHorizontal="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_event_thumbnail"
                imageThumbnail="@{evento.thumbnail}"
                android:layout_width="180dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/event_name"
                android:layout_width="180dp"
                android:text="@{evento.title}"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image_event_thumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                tools:text="@string/event_name"/>
            <TextView
                android:id="@+id/event_year"
                android:text="@{evento.start}"
                android:layout_width="wrap_content"
                android:maxLength="10"
                android:layout_height="wrap_content"
                tools:text="@string/day_of_month_year"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/image_event_thumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_name"
                />

            <ImageButton
                android:id="@+id/btn_arrow"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/arrow_down"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/event_year"
                app:strokeColor="@color/white" />


<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/comicsList"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/image_event_thumbnail"
    tools:listitem="@layout/view_comic_item"
    android:backgroundTint="@color/black"
    android:visibility="gone"
    tools:itemCount="5"
/>
            <TextView
                android:id="@+id/empty_recycler_comic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/image_event_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/sorry_no_data_available"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>